@startuml Entidades
title Entidades dos Boletos da Editora

entity Emissor {
    *nome: string
    *cnpj: string
    *endereco: string
    *conta: Conta    
}

entity Cliente {
    *nome: string
    *cpf: string
    *endereco: Endereco        
    *email: string
    telefone: string
}

entity Faturamento {
    *codigo: int
    *data: date
    *valor: decimal
    *cliente: Cliente
}

entity Boleto {
    *numero: string
    *valor: decimal
    juros: decimal
    multa: decimal
    *dataInclusao: date
    *dataVencimento: date
    *status: Status
    *emissor: Emissor
    *faturamento: Faturamento
}

entity Historico {
    *Status: status
    *observacao: string
    *data_inclusao: date
    *faturamento: Faturamento    
}

entity Endereco {
    *logradouro: string
    *numero: string
    bairro: string
    *cidade: string
    *estado: string
    *cep: string
    *cliente: Cliente
}

entity Conta {
    *agencia: string
    digito_agencia: string
    *numero: string
    *digito_numero: string
    *beneficiario: string
}

entity Status {
    *descricao: string
}

Emissor ||--|| Conta : possui >
Cliente ||--|| Endereco : mora >
Cliente ||--o{ Faturamento : realiza >
Faturamento ||--|| Boleto : gera >
Boleto ||--o{ Status : está >
Boleto ||--|| Emissor : contém >
Historico ||--|| Faturamento : registra >
Historico||--o{ Status : está >

@enduml